fix: Resolve TypeScript import and unused code errors in migration files
- Fixed import paths from '../common/drizzle' to '../src/common/drizzle' in migration files:
  - migrate.ts
  - seedChartOfAccounts.ts
  - seedDefaultAdmin.ts
  - seedDefaultCompany.ts
  - migrateHrSettings.ts

- Implemented proper usage of previously unused imports and functions in seedChartOfAccounts.ts:
  - Added schema validation using insertAccountClassSchema, insertAccountGroupSchema, insertSyntheticAccountSchema, insertAnalyticAccountSchema
  - Integrated parseAccountFunction() for account function parsing (A/P/B validation)
  - Integrated parseAccountCode() for extracting account codes from text lines
  - Integrated getGroupIdForSynthetic() for dynamic group ID resolution
  - Removed unused variables (lines, result) from parseAccountClasses()

- Updated schema imports to use @geniuserp/shared instead of relative paths
- Enhanced data integrity with proper validation before database insertion
- Improved Romanian Chart of Accounts seeding logic with helper functions

TypeScript errors reduced from 6324 to 6314 (10 errors fixed)
All migration files now compile without import/unused code warnings

--- a/nx.json
+++ b/nx.json
@@ -5,17 +5,25 @@
     "default": {
       "runner": "nx/tasks-runners/default",
       "options": {
-        "cacheableOperations": ["build", "lint", "test", "e2e"]
+        "cacheableOperations": [
+          "build",
+          "lint",
+          "test",
+          "e2e"
+        ]
       }
     }
   },
   "targetDefaults": {
     "build": {
-      "dependsOn": ["^build"]
+      "dependsOn": [
+        "^build"
+      ]
     }
   },
   "affected": {
     "defaultBase": "main"
   },
-  "defaultProject": "api"
+  "defaultProject": "api",
+  "nxCloudId": "68fb3427e6f18f63af51b119"
 }
