Fix: API routes returning HTML instead of JSON
PROBLEMA:
- pnpm run dev pornea DOUĂ servere pe același port 5000:
  1. apps/api (backend Express cu Vite middleware)
  2. apps/web (Vite dev server standalone)
- Unul dintre servere primea portul, celălalt skip-uia
- Serverul care pornea primul intercepta toate cererile, inclusiv /api/

FIX-URI APLICATE:
1. package.json: Modificat 'dev' să pornească doar 'api' (care servește și frontend prin Vite middleware)
2. vite.ts: Wrap Vite middleware cu check pentru /api/ - skip complet pentru API routes
3. vite.ts: Corectat ghilimele lipsă în replace pentru main.tsx cachebuster
4. main.ts: Endpoints /health, /test-error, /metrics mutate sub prefix /api/
5. docker-compose.yml: Eliminat APP_PORT_BACKEND - single port architecture pe 5000
6. loki-logger.ts: Corectări TypeScript pentru process.env['VAR'] access

REZULTAT:
- Serverul pornește corect pe portul 5000
- API routes returnează JSON valid (testat: /api/health, /api/metrics)
- Frontend servit prin Vite middleware de pe același port
- 0 linter errors

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,8 +10,7 @@ services:
       - ./libs:/app/libs
       - node_modules_volume:/app/node_modules
     ports:
-      - "${APP_PORT_FRONTEND}:${APP_PORT_FRONTEND}" # Frontend Vite
-      - "${APP_PORT_BACKEND}:${APP_PORT_BACKEND}" # API Backend
+      - "${APP_PORT_FRONTEND}:${APP_PORT_FRONTEND}" # Single port for both frontend (Vite) and backend (Express middleware mode)
     labels:
       - logging=promtail
       - logging_jobname=geniuserp-app
