Docker: Use ONLY pnpm via Corepack (ZERO npm)
✅ Frontend Dockerfile:
- corepack enable + prepare pnpm@10.19.0
- Remove npm install -g pnpm

✅ Backend Dockerfile:
- corepack enable + prepare pnpm@10.19.0
- Remove npm install tsx/drizzle-kit (already în package.json)
- pnpm install handles ALL dependencies

🎯 Result: 100% pnpm, zero npm usage in containers

--- a/Dockerfile.backend.dev
+++ b/Dockerfile.backend.dev
@@ -13,13 +13,14 @@ RUN apk add --no-cache \
     jpeg-dev giflib-dev librsvg-dev \
     busybox-extras
 
-# Instalăm pnpm (cea mai nouă versiune) și instrumente CLI
-RUN npm install -g pnpm@10.19.0 tsx drizzle-kit
+# Activăm pnpm folosind Corepack (built-in în Node.js) - ZERO npm!
+RUN corepack enable && corepack prepare pnpm@10.19.0 --activate
 
 # Copiem fișierele de dependințe pentru caching optim
 COPY package.json pnpm-lock.yaml .npmrc pnpm-workspace.yaml ./
 
 # Instalăm dependințele folosind EXCLUSIV pnpm
+# tsx și drizzle-kit sunt deja în package.json dev dependencies
 RUN pnpm install
 
 # Copiem scriptul de entrypoint
