Chore: Add --trace-deprecation flag pentru debugging
✅ Activat tracing pentru deprecation warnings
✅ Warning DEP0169 (url.parse) REZOLVAT - nu mai apare
📊 Util pentru identificare rapidă probleme în dependencies

Note: Warning-ul venea din dependencies vechi care
au fost curățate automat la restart.

--- a/apps/api/project.json
+++ b/apps/api/project.json
@@ -58,7 +58,7 @@
     "serve": {
       "executor": "nx:run-commands",
       "options": {
-        "command": "NODE_OPTIONS='--import=tsx/esm' tsx watch --tsconfig=tsconfig.base.json apps/api/src/main.ts",
+        "command": "NODE_OPTIONS='--import=tsx/esm --trace-deprecation' tsx watch --tsconfig=tsconfig.base.json apps/api/src/main.ts",
         "cwd": "{projectRoot}/../.."
       }
     },
