fix(migrations): Redenumire corectă AC_account_balances -> AC_accounting_account_balances
- Redenumit fișier migrație: create_AC_account_balances.ts -> create_AC_accounting_account_balances.ts
- Actualizat numele tabelului în toată migrația la AC_accounting_account_balances
- Actualizat toate indexurile cu prefixul corect AC_accounting_account_balance_*
- Actualizat _journal.json cu tag-ul corect create_AC_accounting_account_balances
- Eliminat PRIMARY KEY duplicat din definiția tabelului
- Adăugat notă că AC_account_balances (versiunea simplă) este DEPRECATED
- Tabelul final AC_accounting_account_balances conține structura completă RAS

--- a/docs/audit/index-mapping.json
+++ b/docs/audit/index-mapping.json
@@ -101,7 +101,7 @@
         "definition": "CREATE UNIQUE INDEX accounting_account_balances_pkey ON public.accounting_account_balances USING btree (id)"
       }
     ],
-    "accounting_journal_types": [
+    "AC_journal_types": [
       {
         "name": "accounting_journal_types_pkey",
         "definition": "CREATE UNIQUE INDEX accounting_journal_types_pkey ON public.accounting_journal_types USING btree (id)"
